--- a/cn-lsp/server/cnlsp.opam.locked-5.1.1
+++ b/cn-lsp/server/cnlsp.opam.locked-5.1.1
@@ -1,71 +1,71 @@
 opam-version: "2.0"
 name: "cnlsp"
-version: "~dev"
+version: "dev"
 synopsis: "CN Language Server"
 description: "A language server protocol implementation for the CN language"
 maintainer: "Sam Cowger"
 authors: "Sam Cowger"
 depends: [
-  "base" {= "v0.16.3"}
+  "base" {= "v0.17.1"}
   "base-bigarray" {= "base"}
   "base-bytes" {= "base"}
+  "base-domains" {= "base"}
+  "base-nnp" {= "base"}
   "base-threads" {= "base"}
   "base-unix" {= "base"}
   "cerberus" {= "b9daa22"}
   "cerberus-lib" {= "b9daa22"}
   "cmdliner" {= "1.3.0"}
   "cn" {= "b9daa22"}
-  "conf-bash" {= "1"}
-  "conf-c++" {= "1.0"}
   "conf-findutils" {= "1"}
   "conf-gmp" {= "4"}
   "conf-pkg-config" {= "3"}
-  "conf-python-3" {= "9.0.0"}
-  "cppo" {= "1.6.9"}
+  "cppo" {= "1.7.0"}
   "csexp" {= "1.5.2"}
-  "dune" {= "3.16.0"}
-  "dune-configurator" {= "3.16.0"}
-  "fmt" {= "0.9.0"}
+  "dune" {= "3.16.1"}
+  "dune-configurator" {= "3.16.1"}
   "jsonrpc" {= "1.17.0"}
   "lem" {= "2022-12-10"}
   "linol" {= "0.6"}
   "linol-lwt" {= "0.6"}
   "logs" {= "0.7.0"}
   "lsp" {= "1.17.0"}
-  "lwt" {= "5.7.0"}
+  "lwt" {= "5.8.0"}
   "menhir" {= "20240715"}
   "menhirCST" {= "20240715"}
   "menhirLib" {= "20240715"}
   "menhirSdk" {= "20240715"}
   "monomorphic" {= "2.1.0"}
   "num" {= "1.5-1"}
-  "ocaml" {= "4.14.1"}
-  "ocaml-base-compiler" {= "4.14.1"}
+  "ocaml" {= "5.1.1"}
+  "ocaml-base-compiler" {= "5.1.1"}
   "ocaml-compiler-libs" {= "v0.12.4"}
-  "ocaml-config" {= "2"}
+  "ocaml-config" {= "3"}
   "ocaml-options-vanilla" {= "1"}
+  "ocaml_intrinsics_kernel" {= "v0.17.1"}
   "ocamlbuild" {= "0.15.0"}
   "ocamlfind" {= "1.9.6"}
   "ocamlgraph" {= "2.1.0"}
   "ocplib-endian" {= "1.2"}
-  "parsexp" {= "v0.16.0"}
+  "parsexp" {= "v0.17.0"}
   "pprint" {= "20230830"}
   "ppx_derivers" {= "1.2.1"}
-  "ppx_deriving" {= "6.0.2"}
-  "ppx_sexp_conv" {= "v0.16.0"}
-  "ppx_yojson_conv_lib" {= "v0.16.0"}
-  "ppxlib" {= "0.32.1"}
+  "ppx_deriving" {= "6.0.3"}
+  "ppx_deriving_yojson" {= "3.9.0"}
+  "ppx_sexp_conv" {= "v0.17.0"}
+  "ppx_yojson_conv_lib" {= "v0.17.0"}
+  "ppxlib" {= "0.33.0"}
+  "ppxlib_jane" {= "v0.17.0"}
   "result" {= "1.5"}
   "seq" {= "base"}
-  "sexplib" {= "v0.16.0"}
-  "sexplib0" {= "v0.16.0"}
+  "sexplib" {= "v0.17.0"}
+  "sexplib0" {= "v0.17.0"}
   "sha" {= "1.15.4"}
   "stdlib-shims" {= "0.3.0"}
   "topkg" {= "1.0.7"}
-  "trace" {= "0.7"}
+  "trace" {= "0.8"}
   "uutf" {= "1.0.3"}
   "yojson" {= "2.2.2"}
-  "z3" {= "4.13.0-3"}
   "zarith" {= "1.14"}
 ]
 build: [
