--- a/cn-lsp.opam.locked-4.14.1
+++ b/cn-lsp.opam.locked-4.14.1
@@ -1,11 +1,12 @@
 opam-version: "2.0"
-name: "cnlsp"
+name: "cn-lsp"
 version: "dev"
 synopsis: "CN Language Server"
 description: "A language server protocol implementation for the CN language"
 maintainer: "Sam Cowger"
 authors: "Sam Cowger"
 depends: [
+  "atomic" {= "base"}
   "base" {= "v0.16.3"}
   "base-bigarray" {= "base"}
   "base-bytes" {= "base"}
@@ -18,18 +19,19 @@ depends: [
   "conf-bash" {= "1"}
   "conf-findutils" {= "1"}
   "conf-gmp" {= "4"}
-  "conf-pkg-config" {= "3"}
-  "cppo" {= "1.7.0"}
+  "conf-pkg-config" {= "4"}
+  "cppo" {= "1.8.0"}
   "csexp" {= "1.5.2"}
-  "dune" {= "3.16.1"}
-  "dune-configurator" {= "3.16.1"}
-  "jsonrpc" {= "1.17.0"}
+  "dune" {= "3.17.1"}
+  "dune-configurator" {= "3.17.1"}
+  "fmt" {= "0.9.0"}
+  "jsonrpc" {= "1.20.1"}
   "lem" {= "2022-12-10"}
-  "linol" {= "0.6"}
-  "linol-lwt" {= "0.6"}
+  "linol" {= "0.8"}
+  "linol-lwt" {= "0.8"}
   "logs" {= "0.7.0"}
-  "lsp" {= "1.17.0"}
-  "lwt" {= "5.8.0"}
+  "lsp" {= "1.20.1"}
+  "lwt" {= "5.9.0"}
   "menhir" {= "20240715"}
   "menhirCST" {= "20240715"}
   "menhirLib" {= "20240715"}
@@ -49,10 +51,10 @@ depends: [
   "pprint" {= "20230830"}
   "ppx_derivers" {= "1.2.1"}
   "ppx_deriving" {= "6.0.3"}
-  "ppx_deriving_yojson" {= "3.9.0"}
+  "ppx_deriving_yojson" {= "3.9.1"}
   "ppx_sexp_conv" {= "v0.16.0"}
   "ppx_yojson_conv_lib" {= "v0.16.0"}
-  "ppxlib" {= "0.33.0"}
+  "ppxlib" {= "0.34.0"}
   "result" {= "1.5"}
   "seq" {= "base"}
   "sexplib" {= "v0.16.0"}
@@ -60,7 +62,7 @@ depends: [
   "sha" {= "1.15.4"}
   "stdlib-shims" {= "0.3.0"}
   "topkg" {= "1.0.7"}
-  "trace" {= "0.8"}
+  "trace" {= "0.9"}
   "uutf" {= "1.0.3"}
   "yojson" {= "2.2.2"}
   "zarith" {= "1.14"}
@@ -88,8 +90,5 @@ pin-depends: [
     "cerberus-lib.b9daa22"
     "git+https://github.com/rems-project/cerberus.git#b9daa22"
   ]
-  [
-    "cn.b9daa22"
-    "git+https://github.com/rems-project/cerberus.git#b9daa22"
-  ]
+  ["cn.b9daa22" "git+https://github.com/rems-project/cerberus.git#b9daa22"]
 ]
