server: fix telemetry version

--- a/cn-lsp.opam.locked-5.1.1
+++ b/cn-lsp.opam.locked-5.1.1
@@ -69,7 +69,7 @@ depends: [
   "sexplib0" {= "v0.17.0"}
   "sha" {= "1.15.4"}
   "stdlib-shims" {= "0.3.0"}
-  "telemetry" {= "0.0.1"}
+  "telemetry" {= "dev"}
   "topkg" {= "1.0.7"}
   "trace" {= "0.9"}
   "uutf" {= "1.0.3"}
