--- a/telemetry.opam.locked-5.1.1
+++ b/telemetry.opam.locked-5.1.1
@@ -1,6 +1,6 @@
 opam-version: "2.0"
 name: "telemetry"
-version: "0.0.1"
+version: "dev"
 synopsis: "Telemetry collection"
 maintainer: "Sam Cowger"
 authors: "Sam Cowger"
