--- a/telemetry.opam.locked-5.1.1
+++ b/telemetry.opam.locked-5.1.1
@@ -13,12 +13,26 @@ depends: [
   "base-nnp" {= "base"}
   "base-threads" {= "base"}
   "base-unix" {= "base"}
+  "base_bigstring" {= "v0.17.0"}
+  "base_quickcheck" {= "v0.17.0"}
+  "bin_prot" {= "v0.17.0"}
+  "capitalization" {= "v0.17.0"}
   "cmdliner" {= "1.3.0"}
+  "core" {= "v0.17.1"}
+  "core_kernel" {= "v0.17.0"}
+  "core_unix" {= "v0.17.0"}
   "cppo" {= "1.8.0"}
   "csexp" {= "1.5.2"}
   "dune" {= "3.17.1"}
   "dune-configurator" {= "3.17.1"}
+  "expect_test_helpers_core" {= "v0.17.0"}
+  "fieldslib" {= "v0.17.0"}
   "fmt" {= "0.9.0"}
+  "gel" {= "v0.17.0"}
+  "int_repr" {= "v0.17.0"}
+  "jane-street-headers" {= "v0.17.0"}
+  "jst-config" {= "v0.17.0"}
+  "num" {= "1.5-1"}
   "ocaml" {= "5.1.1"}
   "ocaml-base-compiler" {= "5.1.1"}
   "ocaml-compiler-libs" {= "v0.12.4"}
@@ -28,20 +42,65 @@ depends: [
   "ocaml_intrinsics_kernel" {= "v0.17.1"}
   "ocamlbuild" {= "0.15.0"}
   "ocamlfind" {= "1.9.6"}
+  "parsexp" {= "v0.17.0"}
+  "ppx_assert" {= "v0.17.0"}
+  "ppx_base" {= "v0.17.0"}
+  "ppx_bench" {= "v0.17.0"}
+  "ppx_bin_prot" {= "v0.17.0"}
+  "ppx_cold" {= "v0.17.0"}
   "ppx_compare" {= "v0.17.0"}
+  "ppx_custom_printf" {= "v0.17.0"}
   "ppx_derivers" {= "1.2.1"}
   "ppx_deriving" {= "6.0.3"}
   "ppx_deriving_yojson" {= "3.9.1"}
+  "ppx_diff" {= "v0.17.0"}
+  "ppx_disable_unused_warnings" {= "v0.17.0"}
+  "ppx_enumerate" {= "v0.17.0"}
+  "ppx_expect" {= "v0.17.2"}
+  "ppx_fields_conv" {= "v0.17.0"}
+  "ppx_fixed_literal" {= "v0.17.0"}
+  "ppx_globalize" {= "v0.17.0"}
   "ppx_hash" {= "v0.17.0"}
+  "ppx_here" {= "v0.17.0"}
+  "ppx_ignore_instrumentation" {= "v0.17.0"}
+  "ppx_inline_test" {= "v0.17.0"}
+  "ppx_jane" {= "v0.17.0"}
+  "ppx_let" {= "v0.17.0"}
+  "ppx_log" {= "v0.17.0"}
+  "ppx_module_timer" {= "v0.17.0"}
+  "ppx_optcomp" {= "v0.17.0"}
+  "ppx_optional" {= "v0.17.0"}
+  "ppx_pipebang" {= "v0.17.0"}
   "ppx_sexp_conv" {= "v0.17.0"}
+  "ppx_sexp_message" {= "v0.17.0"}
+  "ppx_sexp_value" {= "v0.17.0"}
+  "ppx_stable" {= "v0.17.0"}
+  "ppx_stable_witness" {= "v0.17.0"}
+  "ppx_string" {= "v0.17.0"}
+  "ppx_string_conv" {= "v0.17.0"}
+  "ppx_tydi" {= "v0.17.0"}
+  "ppx_typerep_conv" {= "v0.17.0"}
+  "ppx_variants_conv" {= "v0.17.0"}
   "ppxlib" {= "0.34.0"}
   "ppxlib_jane" {= "v0.17.0"}
   "re" {= "1.12.0"}
   "seq" {= "base"}
+  "sexp_pretty" {= "v0.17.0"}
+  "sexplib" {= "v0.17.0"}
   "sexplib0" {= "v0.17.0"}
+  "shell" {= "v0.17.0"}
+  "spawn" {= "v0.17.0"}
+  "splittable_random" {= "v0.17.0"}
+  "stdio" {= "v0.17.0"}
   "stdlib-shims" {= "0.3.0"}
+  "textutils" {= "v0.17.0"}
+  "time_now" {= "v0.17.0"}
+  "timezone" {= "v0.17.0"}
   "topkg" {= "1.0.7"}
+  "typerep" {= "v0.17.1"}
+  "uopt" {= "v0.17.0"}
   "uutf" {= "1.0.3"}
+  "variantslib" {= "v0.17.0"}
   "yojson" {= "2.2.2"}
 ]
 build: [
